// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Player/Player.tools.svelte: Empty 1`] = `
<span>
  <div
    class="root svelte-56bbku"
  >
    <audio
      autoplay=""
      class="svelte-56bbku"
      crossorigin="anonymous"
      data-testid="audio"
    />
    <div
      class="content svelte-56bbku"
    >
      <span
        class="current svelte-56bbku"
      />
       
      <div
        class="player svelte-56bbku"
      >
        <span
          class="controls svelte-56bbku"
        >
          
           
          <span
            class="svelte-bazc75"
          >
            <button
              class="iconOnly noBorder svelte-sadb63"
            >
              <i
                class="material-icons svelte-sadb63"
              >
                shuffle
              </i>
               
               
               
            </button>
          </span>
           
          <button
            class="iconOnly noBorder svelte-sadb63"
          >
            <i
              class="material-icons svelte-sadb63"
            >
              skip_previous
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly large svelte-sadb63"
          >
            <i
              class="material-icons svelte-sadb63"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly noBorder svelte-sadb63"
          >
            <i
              class="material-icons svelte-sadb63"
            >
              skip_next
            </i>
             
             
             
          </button>
           
          <span
            class="svelte-bazc75"
          >
            <button
              class="iconOnly noBorder svelte-sadb63"
            >
              <i
                class="material-icons svelte-sadb63"
              >
                repeat
              </i>
               
               
               
            </button>
          </span>
           
        </span>
         
        <div
          class="svelte-fsshrj"
        >
          <span
            class="svelte-fsshrj"
          >
            0:00
          </span>
           
          <div
            class="wrapper w-full svelte-1vx6dav"
          >
            <input
              class="w-full svelte-1vx6dav"
              max="0"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-1vx6dav"
            >
              <span
                class="progress svelte-1vx6dav"
                style="right:100%"
              />
            </div>
          </div>
           
          <span
            class="svelte-fsshrj"
          >
            0:00
          </span>
        </div>
      </div>
       
      <span
        class="volume svelte-56bbku"
      >
        <div
          class="svelte-1j00qbo"
        >
          <span
            class="volume-slider svelte-1j00qbo"
          >
            <div
              class="wrapper w-full svelte-1vx6dav"
            >
              <input
                class="w-full svelte-1vx6dav"
                max="100"
                min="0"
                type="range"
              />
               
              <div
                class="sliderTrack svelte-1vx6dav"
              >
                <span
                  class="progress svelte-1vx6dav"
                  style="right:0%"
                />
              </div>
            </div>
          </span>
           
          <button
            class="iconOnly noBorder svelte-sadb63"
          >
            <i
              class="material-icons svelte-sadb63"
            >
              volume_up
            </i>
             
             
             
          </button>
        </div>
      </span>
    </div>
  </div>
</span>
`;

exports[`Toolshot components/Player/Player.tools.svelte: With track list 1`] = `
<span>
  <div
    class="root svelte-56bbku"
  >
    <audio
      autoplay=""
      class="svelte-56bbku"
      crossorigin="anonymous"
      data-testid="audio"
      src="./no-duration.mp3"
    />
    <div
      class="content svelte-56bbku"
    >
      <span
        class="current svelte-56bbku"
      >
        <div
          class="undefined root svelte-138dtrj"
        >
          <a
            class="svelte-138dtrj"
            href="#/album/1"
          >
            <img
              alt="./# Films/cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-1oz3k7v"
              height="256"
              loading="lazy"
              src="./%23 Films/cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-138dtrj"
          >
            <span
              class="title svelte-138dtrj"
            >
              file 1
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Someone
              </a>
            </span>
          </div>
           
           
        </div>
      </span>
       
      <div
        class="player svelte-56bbku"
      >
        <span
          class="controls svelte-56bbku"
        >
          <span>
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper svelte-1g0595r"
            >
              <button
                class="iconOnly noBorder svelte-sadb63"
              >
                <i
                  class="material-icons svelte-sadb63"
                >
                  library_add
                </i>
                 
                 
                
                 
              </button>
            </span>
             
            
          </span>
          
           
          <span
            class="svelte-bazc75"
          >
            <button
              class="iconOnly noBorder svelte-sadb63"
            >
              <i
                class="material-icons svelte-sadb63"
              >
                shuffle
              </i>
               
               
               
            </button>
          </span>
           
          <button
            class="iconOnly noBorder svelte-sadb63"
            disabled=""
          >
            <i
              class="material-icons svelte-sadb63"
            >
              skip_previous
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly large svelte-sadb63"
            disabled=""
          >
            <i
              class="material-icons svelte-sadb63"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly noBorder svelte-sadb63"
            disabled=""
          >
            <i
              class="material-icons svelte-sadb63"
            >
              skip_next
            </i>
             
             
             
          </button>
           
          <span
            class="svelte-bazc75"
          >
            <button
              class="iconOnly noBorder svelte-sadb63"
            >
              <i
                class="material-icons svelte-sadb63"
              >
                repeat
              </i>
               
               
               
            </button>
          </span>
           
          <button
            class="invisible iconOnly noBorder svelte-sadb63"
          >
            <i
              class="material-icons svelte-sadb63"
            >
              favorite_border
            </i>
             
             
             
          </button>
        </span>
         
        <div
          class="svelte-fsshrj"
        >
          <span
            class="svelte-fsshrj"
          >
            0:00
          </span>
           
          <div
            class="wrapper w-full svelte-1vx6dav"
          >
            <input
              class="w-full svelte-1vx6dav"
              max="0"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-1vx6dav"
            >
              <span
                class="progress svelte-1vx6dav"
                style="right:100%"
              />
            </div>
          </div>
           
          <span
            class="svelte-fsshrj"
          >
            0:00
          </span>
        </div>
      </div>
       
      <span
        class="volume svelte-56bbku"
      >
        <div
          class="svelte-1j00qbo"
        >
          <span
            class="volume-slider svelte-1j00qbo"
          >
            <div
              class="wrapper w-full svelte-1vx6dav"
            >
              <input
                class="w-full svelte-1vx6dav"
                max="100"
                min="0"
                type="range"
              />
               
              <div
                class="sliderTrack svelte-1vx6dav"
              >
                <span
                  class="progress svelte-1vx6dav"
                  style="right:0%"
                />
              </div>
            </div>
          </span>
           
          <button
            class="iconOnly noBorder svelte-sadb63"
          >
            <i
              class="material-icons svelte-sadb63"
            >
              volume_up
            </i>
             
             
             
          </button>
        </div>
      </span>
    </div>
  </div>
</span>
`;
